--- a/nlp.html
+++ b/nlp.html
@@ -114,7 +114,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thefarmersdog/jobs/4491840002'>Job Application for Data Scientist - Natural Language Processing at The Farmer's Dog</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thefarmersdog/jobs/4491840002'>Job Application for Data Scientist - Natural Language Processing at The Farmer's Dog</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -130,7 +130,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ancestry/b9eb8ec4-653b-4454-bff5-abb93e14473d'>Ancestry - Data Scientist (NLP)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/b9eb8ec4-653b-4454-bff5-abb93e14473d'>Ancestry - Data Scientist (NLP)</a></h5> 
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -155,7 +155,7 @@ on various websites and social media platforms that will then be used for?...</p
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-guidehouse.icims.com/jobs/2393/ai-data-scientist-nlp-engineer/job'>AI Data Scientist/NLP Engineer in Washington DC | Careers at 109</a></h5> 
+<h5><a href='https://careers-guidehouse.icims.com/jobs/2393/ai-data-scientist-nlp-engineer/job'>AI Data Scientist/NLP Engineer in Washington DC | Careers at 109</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... 109 is now hiring a AI Data Scientist/NLP Engineer in Washington DC. Review all 
 of the job details and apply today!</p>
@@ -170,13 +170,13 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='http://wolframresearch.recruiterbox.com/jobs/fk0jhff'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://wolframresearch.recruiterbox.com/jobs/fk0jhff'>
     Software Developer?Natural Language Processing  at Wolfram
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1905351'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1905351'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -218,11 +218,11 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
-<h5><a href='https://snap.hr/babylon-health/job/machine-learning-software-engineer-nlp/b7dd3814bac7a1f0f52a69100f416ddb/'>Machine Learning Software Engineer - NLP at Babylon Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/babylon-health/job/machine-learning-software-engineer-nlp/b7dd3814bac7a1f0f52a69100f416ddb/'>Machine Learning Software Engineer - NLP at Babylon Health</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/rakutenamericas/jobs/4402844002'>Job Application for Data Scientists (Machine learning and Natural Language Processing) at Rakuten Americas</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rakutenamericas/jobs/4402844002'>Job Application for Data Scientists (Machine learning and Natural Language Processing) at Rakuten Americas</a></h5> 
 <p><span class="badge badge-light">Boston, MANew York, New York San Mateo, CA  North America</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
@@ -295,7 +295,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thematic.workable.com/j/6F11552079'>Thematic - Jobs: Senior Data Scientist NLP - Apply online</a></h5> 
+<h5><a href='https://thematic.workable.com/j/6F11552079'>Thematic - Jobs: Senior Data Scientist NLP - Apply online</a></h5> 
 <p><span class="badge badge-light">New Zealand Auckland</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -350,7 +350,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 machine learning to surface new knowledge. We are a VC-backed tech company
 ?...</p>
 <hr/>
-<h5><a href='https://axur.workable.com/jobs/1111409'>Axur. Digital Risk Protection - Jobs: Data Scientist - NLP - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axur.workable.com/jobs/1111409'>Axur. Digital Risk Protection - Jobs: Data Scientist - NLP - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>20 Ago 2019 ... Como Analista de Machine Learning na Axur, seu desafio ser? trabalhar com 
 processamento de linguagem natural, analisando dados e criando algoritmos 
@@ -377,7 +377,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adarga.recruitee.com/o/natural-language-processing-data-scientist'>
+<h5><a href='https://adarga.recruitee.com/o/natural-language-processing-data-scientist'>
       Natural Language Processing Data Scientist - Adarga
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -396,7 +396,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p>Aug 15, 2019 ... Data Scientist NLP (Entale). London, United Kingdom. Accelerator ? Engineering
 . Full-time. Apply for this job. We are looking for a talented Data Scientist to?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lendeavor/e0696d76-180f-4994-a4ad-0376274d235a'>Lendeavor - Senior Software Engineer, Computer Vision and NLP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lendeavor/e0696d76-180f-4994-a4ad-0376274d235a'>Lendeavor - Senior Software Engineer, Computer Vision and NLP</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
@@ -483,7 +483,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p>6 days ago ... Apply to Senior Data Scientist, NLP at Fractal Analytics in Mumbai, Maharashtra, 
 India.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 27, 2019 ... Apply online for the job of NLP Engineer at Amplexor.</p>
 <hr/>
@@ -495,7 +495,7 @@ India.</p>
 <p><span class="badge badge-light">Z?rich, Zurich, Switzerland</span></p>
 <p>Posted on: 2019-08-02</p>
 <hr/>
-<h5><a href='https://10clouds.workable.com/jobs/1084159'>Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://10clouds.workable.com/jobs/1084159'>Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 22, 2019 ... Apply online for the job of Python Developer (NLP & Data Science) at 10Clouds.</p>
 <hr/>
